--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <hi>hello this is martina</hi>
+        <h1>hello this is martina</h1>
         <script src="app.js"></script>
     </body>
     </html>
